         and https://forum.kodi.tv/showthread.php?tid=307394&pid=2531524

WIP      Implemented "Most played MAME machines"

WIP      Implemented "Recently played MAME machines"

WIP      Implemented "Most played SL ROMs"

WIP      Implemented "Recently played SL ROMs"


[B]Advanced Emulator Launcher | version 0.9.4 | xx March 2018[/B]

FEATURE  Render PDF manuals consisting of image scans (99% of game manuals are scans of images).
         Thank you very much to i96751414 for allowing use of his PDF reader addon code.
         Have a look at the PDF reader addon https://forum.kodi.tv/showthread.php?tid=187421
         and https://github.com/i96751414/plugin.image.pdfreader
         This initial implementation somewhat works for some PDFs but code can be improved a lot.

WIP      Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!

FEATURE  Create a hased database for all catalog filter combination. This will require the
         creation of about 5000 json files but will make AEL as fast as possible.

FEATURE  Hashed database for assets, in a similar fashion to the catalog ROM hashed database.

FEATURE  Make a ROM cache and a assets cache for the MAME filters. That will increase the
         loading speed of the MAME filters a lot.

FEATURE  Support MAME artwork by Mr. Do's. Note that Clones use Parent's artwork automatically.

FEATURE  Use Parent/Clone substituted artwork in MAME. For example, most trailers are only available
         for the Parent machine and can be used by Clone machines.

FEATURE  Use Parent/Clone substituted artwork in Software Lists.

FEATURE  Build Fanarts from other pieces of artwork for Software List items.

FEATURE  Build Fanarts from other pieces of artwork for MAME machines.

FEATURE  Test MAME and SL Fanart building.

FEATURE  Custom MAME filters, using XML files. Merge some of the functionality of NARS into AML.