@@ -18,13 +18,21 @@ WIP      Implemented "Recently played SL ROMs"
 
 [B]Advanced Emulator Launcher | version 0.9.4 | xx March 2018[/B]
 
+WIP      Clean Render and main machine JSON files. Currently, there are repeated fields on both
+         DBs like nplayers.
+
+WIP      Move flags and plot from the render database to the assets database. Flags are modified
+         by the scanner only and plot generated after the scanner. If flags and plot are in
+         the asset DB, the ROM cache and hashed DB must be regenerated after the database building
+         only and not always like now.
+
+WIP      Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!
+
 FEATURE  Render PDF manuals consisting of image scans (99% of game manuals are scans of images).
          Thank you very much to i96751414 for allowing use of his PDF reader addon code.
          Have a look at the PDF reader addon https://forum.kodi.tv/showthread.php?tid=187421
          and https://github.com/i96751414/plugin.image.pdfreader
          This initial implementation somewhat works for some PDFs but code can be improved a lot.
-
-WIP      Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!
 
 FEATURE  Create a hased database for all catalog filter combination. This will require the
          creation of about 5000 json files but will make AEL as fast as possible.
